hasil idex ke dua

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section>
             <h2>Fitur Utama</h2>
             <ul>
-                <li>Roadmap Kuliah Mendalam</li>
+                <li>Roadmap Kuliah</li>
                 <li>Tes Kepribadian Jurusan</li>
                 <li>Kalkulator Kerugian Biaya</li>
             </ul>
