--- a/portofolio.html
+++ b/portofolio.html
@@ -59,6 +59,11 @@
             <p>Fokus pada ilmu obat-obatan, mulai dari pembuatan hingga distribusi dan penggunaannya.</p>
             <a href="#">Lihat Roadmap Detail</a>
         </article>
+        <article>
+            <h3>Ekonomi Pembangunan</h3>
+            <p>Fokus sistem pembangunan ekonomi</p>
+            <a href="#">Lihat Roadmap Detail</a>
+        </article>
     </section>
     </main>
 </body>
