--- a/portofolio.html
+++ b/portofolio.html
@@ -5,61 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+kdksw          
 <body>
-    <main>
-    <section>
-        <h2>Roadmap Jurusan Unggulan</h2>
-        <article>
-            <h3>Sistem Informasi</h3>
-            <p>Mempelajari jembatan antara bisnis dan teknologi informasi.</p>
-            <a href="#">Lihat Roadmap Detail</a>
-        </article>
-        <article>
-            <h3>Teknik Informatika</h3>
-            <p>Fokus pada pengembangan perangkat lunak dan algoritma kompleks.</p>
-            <a href="#">Lihat Roadmap Detail</a>
-        </article>
-        <article>
-            <h3>Teknik Elektro</h3>
-            <p>Mempelajari prinsip dan aplikasi listrik, elektronika, dan elektromagnetik.</p>
-            <a href="#">Lihat Roadmap Detail</a>
-        </article>
-        <article>
-            <h3>Teknik Sipil</h3>
-            <p>Berfokus pada perancangan, pembangunan, dan pemeliharaan infrastruktur.</p>
-            <a href="#">Lihat Roadmap Detail</a>
-        </article>
-        <article>
-            <h3>Manajemen</h3>
-            <p>Mempelajari pengelolaan organisasi, sumber daya manusia, dan strategi bisnis.</p>
-            <a href="#">Lihat Roadmap Detail</a>
-        </article>
-        <article>
-            <h3>Akuntansi</h3>
-            <p>Fokus pada pencatatan, pelaporan, dan analisis keuangan perusahaan.</p>
-            <a href="#">Lihat Roadmap Detail</a>
-        </article>
-        <article>
-            <h3>Desain Komunikasi Visual</h3>
-            <p>Mempelajari cara menyampaikan pesan melalui media visual dan grafis.</p>
-            <a href="#">Lihat Roadmap Detail</a>
-        </article>
-        <article>
-            <h3>Ilmu Komunikasi</h3>
-            <p>Berfokus pada teori dan praktik komunikasi massa, media, dan hubungan masyarakat.</p>
-            <a href="#">Lihat Roadmap Detail</a>
-        </article>
-        <article>
-            <h3>Psikologi</h3>
-            <p>Mempelajari perilaku, pikiran, dan proses mental manusia.</p>
-            <a href="#">Lihat Roadmap Detail</a>
-        </article>
-        <article>
-            <h3>Farmasi</h3>
-            <p>Fokus pada ilmu obat-obatan, mulai dari pembuatan hingga distribusi dan penggunaannya.</p>
-            <a href="#">Lihat Roadmap Detail</a>
-        </article>
-    </section>
-    </main>
-</body>
-</html>
+    <h1>Portofolio</h1>
+    <p>Portofolio kami mencakup berbagai proyek yang telah kami kerjakan, mulai dari aplikasi mobile hingga solusi perangkat lunak untuk perusahaan. Kami bangga dengan setiap proyek yang telah kami selesaikan dan terus berusaha untuk meningkatkan kualitas layanan kami.</p>
+    <p>Beberapa proyek unggulan kami meliputi:</p>
+    <ul>
+        <li>Aplikasi navigasi berbasis AI yang membantu pengguna menemukan rute tercepat dan teraman.</li>
+        <li>Sistem manajemen lalu lintas yang digunakan oleh kota-kota besar untuk mengurangi kemacetan.</li>
+        <li>Platform analitik data yang memberikan wawasan mendalam tentang perilaku pengguna dan tren pasar.</li>
+    </ul>
+    <p>Kami terus mencari peluang untuk bekerja dengan klien baru dan menghadirkan solusi inovatif yang memenuhi kebutuhan mereka. Jika Anda tertarik untuk bekerja sama dengan kami atau ingin mengetahui lebih lanjut tentang portofolio kami, jangan ragu untuk menghubungi kami.</p>
