--- a/about.html
+++ b/about.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tentang Kami - PathFinder Project</title>
 </head>
-fjnebnjhfenjfnjefefefefef<body>
+<body>  
     <h1>Tentang Kami</h1>
-    <p>PathFinder Project adalah sebuah inisiatif untuk mengembangkan solusi navigasi yang inovatif dan efisien. Kami berkomitmen untuk memberikan pengalaman pengguna yang terbaik melalui teknologi terkini dan desain yang intuitif.</p>
+    <p>Pilih.in Project adalah sebuah inisiatif untuk mengembangkan solusi navigasi yang inovatif dan efisien. Kami berkomitmen untuk memberikan pengalaman pengguna yang terbaik melalui teknologi terkini dan desain yang intuitif.</p>
     <p>Tim kami terdiri dari para ahli di bidang teknologi, desain, dan pengembangan perangkat lunak yang berdedikasi untuk menciptakan produk yang memenuhi kebutuhan pengguna di seluruh dunia.</p>
     <p>Kami percaya bahwa dengan kerja keras, kreativitas, dan kolaborasi, kami dapat mencapai tujuan kami untuk menjadi pemimpin dalam industri navigasi digital.</p>
+    <p>Ada lah pokoknya</p>
+</body>
